# workflow

./: CMakeLists.txt  build  build.cmd
.github/workflows/: CMake.yml  cmake.yml
src/: demo.cpp
